<resources>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contrast_text"><![CDATA[%s <b>%s</b>]]></string>
    <string name="api_key">AIzaSyDrg6Ds3fRXopTa8YCH5jxp1-4riWd3oCQ</string>
    <string name="thank_you_for_your_order">Thank you for your order! Please check \n your email for your receipt\n\n Luuk out to our rider in the next\n <b>60 minutes</b></string>
    <string name="track_your_order"><u>Track Your Order</u></string>
    <string name="that_did_now_work_please_try_again">That did now work, <b>please try again</b></string>
    <string name="strike_amt"><strike>Ksh 300</strike></string>
    <string-array name="item_target_array">
        <item>Select target...</item>
        <item>Female</item>
        <item>Male</item>
        <item>Child</item>
    </string-array>
</resources>