<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/navSearch"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"/>
    <item
        android:id="@+id/navCart"
        android:enabled="true"
        android:icon="@drawable/cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/navProfile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/navLogout"
        android:enabled="true"
        android:icon="@drawable/logout"
        android:title="@string/logout"/>
</menu>